Fix regression: on smaller devices, image should be on top (like previously)

--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -109,17 +109,6 @@ body {
     padding-bottom: 5%;
 }
 
-.centered-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    column-gap: 10%;
-}
-
 .info {
     display: inline-block;
 }
